# home-energy-tools

./: .gitignore  Cargo.toml  README.adoc
openapi-client/openapi/: README.md
openapi-client/openapi/docs/: ConflictError.md  ConnectionType.md  ConsumptionLifetimeResponse.md  ConsumptionStatsResponse.md  ConsumptionStatsResponseIntervals.md  EnvoysResponse.md  EnvoysResponseEnvoys.md  InventoryResponseEnvoys.md  InventoryResponseMeters.md  InvertersSummaryByEnvoyOrSiteResponse.md  InvertersSummaryByEnvoyOrSiteResponseEnergy.md  InvertersSummaryByEnvoyOrSiteResponseMicroInverters.md  RgmStatsResponseIntervals.md  SearchSystemIdResponse.md  StatsResponse.md  StatsResponseIntervals.md  SystemsResponseSystems.md  UnprocessableEntityError.md
openapi/.openapi-generator/: FILES
openapi/docs/: ClientError.md  DefaultApi.md  EnergyLifetimeResponse.md  InventoryResponse.md  Meta.md  MonthlyProductionResponse.md  MonthlyProductionResponseMeterReadings.md  NotFoundError.md  ProductionMeterReadingsResponse.md  ProductionMeterReadingsResponseMeterReadings.md  RgmStatsResponse.md  RgmStatsResponseIntervals1.md  RgmStatsResponseMeterIntervals.md  ServerError.md  SummaryResponse.md  SystemsResponse.md
openapi/src/apis/: configuration.rs  default_api.rs
openapi/src/models/: conflict_error.rs  consumption_stats_response.rs  energy_lifetime_response.rs  envoys_response.rs  inventory_response_envoys.rs  inverters_summary_by_envoy_or_site_response_energy.rs  mod.rs  production_meter_readings_response.rs  (+5 more)
src/: common.rs  data_aggregator.rs  enlighten.yaml  lib.rs  main.rs  pge.rs
(+22 files in other folders)
