[package]
name = "solar-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2"
chrono = { version = "0.4", features = [ "serde" ] }
csv = "1.1"
lazy_static = "1.4"
openapi = { path = "./openapi-client/openapi" }
reqwest = "0.11"
serde = { version = "1.0.131", features = [ "derive" ] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1.0", features = [ "full" ] }
toml = "0.5.8"
